cleanup fixed "jumping buttons"
git-svn-id: https://ppwcode.googlecode.com/svn/javascript/vernacular/persistence/trunk@7247 463e38ab-4f4e-0410-907a-65d2b3888964

--- a/src/persistence/ui/persistentObjectButtonEditPane/PersistentObjectButtonEditPane.css
+++ b/src/persistence/ui/persistentObjectButtonEditPane/PersistentObjectButtonEditPane.css
@@ -1,10 +1,4 @@
-.persistentObjectButtonEditPane-buttons {
-  position: absolute;
-  right: 8px;
-  bottom: 5px; /* MUDO */
-}
-
-.persistentObjectButtonEditPane > div {
+.persistentObjectButtonEditPane {
   /* the layout container */
   width: 100%;
   height: 100%;
@@ -16,6 +10,10 @@
   /* the content panes */
   background-color: transparent;
   border: none;
+}
+
+.persistentObjectButtonEditPane .dgrid-grid {
+  background-color: transparent;
 }
 
 .persistentObjectButtonEditPane.SemanticObjectPane_busy {
@@ -36,6 +34,21 @@
   background-position: center;
 }
 
-.persistentObjectButtonEditPane .dgrid-grid {
-  background-color: transparent;
+.persistentObjectButtonEditPane-buttons {
+  position: relative; /* anchor point for auditableInfoPane */
+  height: 30px;
+}
+
+.persistentObjectButtonEditPane-buttons .persistentObjectButtonEditPane-buttons-buttons {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+}
+
+.persistentObjectButtonEditPane-buttons .auditableInfoPane {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
